<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicioFragment"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/aperturasFragment"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_aperturas" />
        <item
            android:id="@+id/tacticasFragment"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_tacticas" />
        <item
            android:id="@+id/blocNotasFragment"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_bloc_notas" />
        <item
            android:id="@+id/socialFragment"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_comunidad" />

        <item
            android:id="@+id/chessBoardFragment"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/menu_practica" />
    </group>

</menu>