<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_ajustes"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apariencia"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#673AB7"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modo_oscuro"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idioma"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#673AB7"/>

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/rbSpanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Español" />

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="English" />
    </RadioGroup>

</LinearLayout>